tests/NormalTests/paczka1/small_fuzzy/20560791.err
Error in line 1: w4G10bDsV S310 44,0
Error in line 6: vbvy995Q A605 51,6
Error in line 3: DiC A227 5,8
Error in line 10: w4G10bDsV A227 254,0
